--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
           <a href="./" class="logo">AstroStars</a>
         </div>
         <div class="github-logo">
-          <a href="" class="github-logo" title="Github link">
+          <a
+            href="https://github.com/infjdeepak/AstroStars"
+            target="_blank"
+            class="github-logo"
+            title="Github link"
+          >
             <img src="./img/github-mark-white.png" alt="GitHub" />
           </a>
         </div>
